-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2, 6.5, 6.7, 6.8.0
-
None
-
-
37861df8e (dev), f54e50e51 (6.8), f4feba77a (6.7), be1ce6a5a (tqtc/lts-6.5), 12ed8fcae (tqtc/lts-6.2)
Expected result: When unplugging a dock widget the position of the widget should be under the mouse.
Actual result: When unplugging a dock widget the position of the widget is a lot further away from the mouse than it should be. Instead of the widget being under the mouse, it is away from it by one time its size. (see video)
For Gerrit Dashboard: QTBUG-126084 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
565902,6 | QDockWidget: fix positioning after unplugging from floating tab | dev | qt/qtbase | Status: MERGED | +2 | 0 |
566567,2 | QDockWidget: fix positioning after unplugging from floating tab | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
566811,2 | QDockWidget: fix positioning after unplugging from floating tab | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
566988,2 | QDockWidget: fix positioning after unplugging from floating tab | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
567037,3 | QDockWidget: fix positioning after unplugging from floating tab | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | +1 |